--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "axios": "^0.21.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-rellax": "^1.0.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-toastify": "^7.0.4",
+    "rellax": "^1.12.1",
     "swiper": "^6.7.5",
     "web-vitals": "^1.1.2"
   },
